force-app/main/default/objects/NSF_Star_Listing__c/NSF_Star_Listing__c.object-meta.xml
<CustomObject>
    <label>NSF Star Listing</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSF Star Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>