force-app/main/default/objects/NSF_Star_Listing__c/fields/NSF_CardId__c.field-meta.xml
<CustomField>
    <fullName>NSF_CardId__c</fullName>
    <label>Card</label>
    <referenceTo>NSF_Card__c</referenceTo>
    <relationshipLabel>Card Stars</relationshipLabel>
    <relationshipName>NSF_Card_Stars</relationshipName>
    <type>Lookup</type>
</CustomField>