force-app/main/default/objects/NSF_Star_Listing__c/fields/NSF_ExamId__c.field-meta.xml
<CustomField>
    <fullName>NSF_ExamId__c</fullName>
    <label>Exam</label>
    <referenceTo>NSF_Exam__c</referenceTo>
    <relationshipLabel>Exam Stars</relationshipLabel>
    <relationshipName>NSF_Exam_Stars</relationshipName>
    <type>Lookup</type>
</CustomField>