force-app/main/default/objects/NSF_Star_Listing__c/fields/NSF_NoteId__c.field-meta.xml
<CustomField>
    <fullName>NSF_NoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note</label>
    <referenceTo>NSF_Note__c</referenceTo>
    <relationshipLabel>Note Stars</relationshipLabel>
    <relationshipName>NSF_Note_Stars</relationshipName>
    <type>Lookup</type>
</CustomField>