force-app/main/default/objects/NSF_Star_Listing__c/fields/NSF_ResourceId__c.field-meta.xml
<CustomField>
    <fullName>NSF_ResourceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>NSF_Resource__c</referenceTo>
    <relationshipLabel>Resource Stars</relationshipLabel>
    <relationshipName>NSF_Resource_Stars</relationshipName>
    <type>Lookup</type>
</CustomField>