force-app/main/default/objects/NSF_Star_Listing__c/fields/NSF_SectionId__c.field-meta.xml
<CustomField>
    <fullName>NSF_SectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>NSF_Section__c</referenceTo>
    <relationshipLabel>Star Listings</relationshipLabel>
    <relationshipName>NSF_Section_Stars</relationshipName>
    <type>Lookup</type>
</CustomField>